force-app/main/default/objects/DataManagement__c/DataManagement__c.object-meta.xml
<CustomObject>
    <label>データ管理</label>
    <nameField>
        <displayFormat>DM-{000000000}</displayFormat>
        <label>データ管理名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>