force-app/main/default/objects/DataManagement__c/fields/ConfirmTargetDocument__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTargetDocument__c</fullName>
    <label>確認対象書類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>