force-app/main/default/objects/DataManagement__c/fields/CorporateHousingDataCorrection__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingDataCorrection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>社宅D修正</label>
    <type>Checkbox</type>
</CustomField>