force-app/main/default/objects/DataManagement__c/fields/CorporateHousingDataCorrectioner__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingDataCorrectioner__c</fullName>
    <label>社宅D修正者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>