force-app/main/default/objects/DataManagement__c/fields/CorporateHousingDataReturnDate__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingDataReturnDate__c</fullName>
    <label>社宅D戻し日</label>
    <type>Date</type>
</CustomField>