force-app/main/default/objects/DataManagement__c/fields/CorrectionConfirm__c.field-meta.xml
<CustomField>
    <fullName>CorrectionConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>修正確認</label>
    <type>Checkbox</type>
</CustomField>