force-app/main/default/objects/DataManagement__c/fields/CorrectionConfirmer__c.field-meta.xml
<CustomField>
    <fullName>CorrectionConfirmer__c</fullName>
    <label>修正確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>