force-app/main/default/objects/DataManagement__c/fields/CorrectionRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CorrectionRequestDate__c</fullName>
    <label>修正依頼日</label>
    <type>Date</type>
</CustomField>