force-app/main/default/objects/DataManagement__c/fields/CorrectionRequester__c.field-meta.xml
<CustomField>
    <fullName>CorrectionRequester__c</fullName>
    <label>修正依頼者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>