force-app/main/default/objects/DataManagement__c/fields/DataReflectionCompleted__c.field-meta.xml
<CustomField>
    <fullName>DataReflectionCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>データ反映完了</label>
    <type>Checkbox</type>
</CustomField>