force-app/main/default/objects/DataManagement__c/fields/InputStatus__c.field-meta.xml
<CustomField>
    <fullName>InputStatus__c</fullName>
    <label>入力状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>