force-app/main/default/objects/DataManagement__c/fields/IrregularField__c.field-meta.xml
<CustomField>
    <fullName>IrregularField__c</fullName>
    <label>イレギュラー項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>