force-app/main/default/objects/DataManagement__c/fields/OperatorChecker__c.field-meta.xml
<CustomField>
    <fullName>OperatorChecker__c</fullName>
    <label>OPチェック者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>