force-app/main/default/objects/DataManagement__c/fields/OperatorConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>OperatorConfirmDate__c</fullName>
    <label>OP確認日</label>
    <type>Date</type>
</CustomField>