force-app/main/default/objects/DataManagement__c/fields/OperatorConfirmer__c.field-meta.xml
<CustomField>
    <fullName>OperatorConfirmer__c</fullName>
    <label>OP確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>