force-app/main/default/objects/DataManagement__c/fields/OperatorConfirmResultDetail__c.field-meta.xml
<CustomField>
    <fullName>OperatorConfirmResultDetail__c</fullName>
    <label>OP確認結果詳細</label>
    <type>TextArea</type>
</CustomField>