force-app/main/default/objects/DataManagement__c/fields/ReconfirmChecker__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmChecker__c</fullName>
    <label>再査チェック者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>