force-app/main/default/objects/DataManagement__c/fields/ReconfirmConfirm__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再査確認</label>
    <type>Checkbox</type>
</CustomField>