force-app/main/default/objects/DataManagement__c/recordTypes/IrregularSheet.recordType-meta.xml
<RecordType>
    <fullName>IrregularSheet</fullName>
    <active>true</active>
    <label>イレギュラーシート</label>
</RecordType>