force-app/main/default/objects/DataManagement__c/recordTypes/SOReturn.recordType-meta.xml
<RecordType>
    <fullName>SOReturn</fullName>
    <active>true</active>
    <label>SO戻し</label>
</RecordType>